@@ -1,0 +1,3 @@
+composer.lock
+.git
+vendor
